--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=KH
+spring.jpa.database=POSTGRESQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/kh
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.mvc.hiddenmethod.filter.enabled=true
